# resnet10

./: .gitignore  CLAUDE.md  README.md  convert_jax_to_pytroch.py  pyproject.toml  validate.py  validate_outputs_are_same.py
.github/workflows/: python-app.yml
resnet_10/: configuration_resnet.py  modeling_resnet.py  spatial_embeddings.py
resnet_10/classifiers/: README.md  __init__.py  heads.py  training.py  utils.py  validation.py
resnet_10/tests/: test_end2end.py  test_modeling_resnet.py
